# cyberquest_2023_mj

./: README.md
ctf-application_ointment/: Dockerfile  README.md  StartingPoint.md  docker-compose.yml  httpd.conf  poc.py  supervisord.conf
ctf-application_ointment/backend/: Dockerfile.build  build.sh  go.mod  main.go  usernames.txt
ctf-application_ointment/frontend/: Dockerfile.build  build.sh  package-lock.json  package.json  svelte.config.js
ctf-costumery/: Dockerfile  Dockerfile.build  Hints.md  README.md  StartingPoint.md  docker-compose.yml  exploit.py  flag.txt  poc.py
ctf-costumery/src/: Makefile  main.c
ctf-delphi/: Dockerfile  README.md  StartingPoint.md  docker-compose.yml  flag.txt  poc.py
ctf-delphi/assets/: package_challenge.sh
ctf-delphi/src/: Dockerfile.build  Makefile  main.c
ctf-here_ott/: Dockerfile  Hints.md  README.md  StartingPoint.md  docker-compose.yml  poc.py
ctf-here_ott/backend/: Dockerfile.build  build.sh  discordhook.go  go.mod  go.sum  main.go  (+1 more)
ctf-here_ott/native-api/: Cargo.toml  Dockerfile.build  build.sh
ctf-here_ott/native-api/src/: lib.rs
ctf-here_ott_redirect/: .gitignore  Dockerfile  README.md  go.mod  redirect.go
ctf-nnnnsick/: .gitignore  README.md  StartingPoint.md  compress.sh  poc.py
ctf-oracle/: Dockerfile  README.md  StartingPoint.md  docker-compose.yml  flag.txt  poc.py
ctf-sitefari/: Dockerfile  README.md  StartingPoint.md  backup.sql  docker-compose.yml  init-mysql.sh  nginx.conf  poc.py  supervisord.conf
ctf-whoami/: Dockerfile  HINTS.md  README.md  StartingPoint.md  docker-compose.yml  poc.py
(+136 files in other folders)
